
Custom enrolment view for student lists.

Fix to the enrolments list: hide submit when all applied is listed.

Private fields implemented for contact phone numbers and addresses.

Basic column copy into function for MarkBook.

The report definition functions now filter by the report's subject_status.

The report_reports_list script filters relevant classes by a report's
subject_status.


Version ClaSS-1.0.20 release (2012/04/22)
-------------------------------------------

Analysis of spending and materials purchased by supplier.

Bugfix to editing Internal Assessment on the SEN view page.

InfoBook search for other groups includes over-all list by community
type.

Message ID and Organization on email headers.

Changed export scripts to use file cache under dataroot.

Performance improvement for js function processContent.


Version ClaSS-1.0.19 release (2012/04/10)
-------------------------------------------

Fix to profile average column with compound profiles.

Export students tweaked to compensate for too many phones.

Extra single student field for FirstContactMobilePhone.



Version ClaSS-1.0.18 release (2012/03/20)
-------------------------------------------

Added the absence notes to the summary attendnace report sheet.

Added a list all button to the MedBook.

Upgraded tinyMCE to fix compatibility with Firefox 11 and above.

New import routine for transport routes and journeys.

Added times of departure to the route sheet for bus stops.

Added coice of field separator to import students.

A new SubjectDecsription option added to fetchSubjectReport.



Version ClaSS-1.0.17 release (2012/03/10)
-------------------------------------------

Register notices now work with house groups using their yeargroup to
identify.

Allow grouping of order items by catalogue and added catalogue_id
field to order and catalogue table.

Delete button for unsued budgets (without orders and without subbudgets).
